<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"

        >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/box"
            android:contentDescription="For background"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/box_transparent"
            android:contentDescription="For cover"
            app:layout_constraintBottom_toBottomOf="@+id/imgPoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="For cover image"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#fff"
            android:contentDescription="for value content"
            app:layout_constraintBottom_toBottomOf="@+id/tvRate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvRate" />

        <ImageView
            android:id="@+id/imgstrip"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:contentDescription="for strip"
            android:src="#9f9f9f"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imgstrip2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:contentDescription="for strip"
            android:src="#9f9f9f"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/tvMinutes"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="5dp"
            android:layout_height="0dp"
            android:background="#f06"
            android:contentDescription="for siders"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:srcCompat="@drawable/box" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="5dp"
            android:layout_height="0dp"
            android:background="#f06"
            android:contentDescription="for siders"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:srcCompat="@drawable/box" />

        <TextView
            android:id="@+id/tvProducer"
            style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tvProduser"
            android:textColor="#000"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgPoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPoster" />

        <TextView
            android:id="@+id/tvJudul"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tvJudul"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvProducer"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imgPoster" />

        <TextView
            android:id="@+id/tvRate"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableLeft="@drawable/ic_star_black_24dp"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/tvRating"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/10"
            android:textColor="#9f9f9f"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvRate"
            app:layout_constraintStart_toEndOf="@+id/tvRate"
            app:layout_constraintTop_toTopOf="@+id/tvRate" />

        <TextView
            android:id="@+id/tvMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="2"
            android:text="@string/tvDuration"
            android:textAlignment="center"
            android:textColor="#9f9f9f"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/imgstrip"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@string/tvGenre"
            android:textColor="#9f9f9f"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/imgFav"
            app:layout_constraintStart_toEndOf="@+id/imgstrip2"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView10"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="8dp"
            android:text="Overview"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView12"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="16dp"
            android:text="@string/tvRelease"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:lineHeight="10pt"
            android:text="@string/tvOverview"
            android:textColor="#9f9f9f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/tvRelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="Release Date"
            android:textColor="#9f9f9f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <ImageView
            android:id="@+id/imgFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="for fav indicator"
            app:layout_constraintBottom_toBottomOf="@+id/tvGenre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvGenre"
            app:srcCompat="@drawable/ic_favorite_black" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>